<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">


    <TextView
        style="@style/texts_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_inicial" />


    <br.senai.sp.cfp132.contagotas.view.NumberPickView
        android:id="@+id/number_pick_inic_periodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center" />

    <TextView
        style="@style/texts_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_observado" />

    <br.senai.sp.cfp132.contagotas.view.NumberPickView
        android:id="@+id/number_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center" />

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/buttonSalvarMedicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="salvar"
        android:textColor="@color/branco"
        android:shadowColor="#888888"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/buttonshape"
        android:text="@string/gravar_leitura" />


</LinearLayout>
