<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:paddingTop="15dp"
    android:stretchColumns="2">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendario1" />

        <TextView
            style="@style/text_views_hist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/inicio" />

        <TextView
            android:id="@+id/text_view_inicio"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/image_fim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendario31" />

        <TextView
            style="@style/text_views_hist"
            android:layout_width="match_parent"
            android:layout_gravity="left|center"
            android:layout_height="wrap_content"
            android:text="@string/fim" />

        <TextView
            android:id="@+id/text_view_fim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:textColor="#fff" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/torneira" />


        <TextView
            style="@style/text_views_hist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/consumo" />

        <TextView
            android:id="@+id/text_view_consumo"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff" />
    </TableRow>
</TableLayout>